# xpath-rs

./: Cargo.toml  README.md
evaluate/src/: main.rs
src/: axis.rs  context.rs  expression.rs  function.rs  lib.rs  node_test.rs  nodeset.rs  parser.rs  token.rs  tokenizer.rs
tests/: integration.rs
