[package]
name = "xpath-rs"
version = "0.5.0"
authors = [
    "Ville Lindholm <ville@lindholm.dev>",
    "Jake Goulding <jake.goulding@gmail.com>",
]
edition = "2018"

description = "An XPath 1.0 library written in Rust"
readme = "README.md"
keywords = ["xml", "xpath"]

repository = "https://github.com/vlindhol/xpath-rs"
documentation = "https://docs.rs/xpath-rs/"

license = "MIT"

[dependencies]
peresil = "0.3.0"
sxd-document = ">= 0.2, < 0.4"
snafu = "0.5.0"
